--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.20.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
