--- a/client/package.json
+++ b/client/package.json
@@ -5,20 +5,25 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "vue-cli-service build --mode development --watch"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bootstrap-vue": "^2.0.4",
+    "fabric": "^4.2.0",
     "flatpickr": "^4.5.1",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
+    "sweetalert2": "^10.3.5",
     "vue": "^2.6.6",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.2",
     "vue2-transitions": "^0.2.3",
     "vuedraggable": "^2.24.1",
-    "vuetify": "^2.3.12",
+    "vuelidate": "^0.7.5",
+    "vuetify": "^2.2.11",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
@@ -26,8 +31,11 @@
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.6"
+    "node-sass": "^4.14.1",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-vuetify": "^2.0.7",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.3.0"
   }
 }
