--- a/server/package.json
+++ b/server/package.json
@@ -23,15 +23,22 @@
   "private": true,
   "dependencies": {
     "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^7.0.3",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "form-data": "^3.0.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
