landing page designed fully

--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
     "serve": "vue-cli-service serve",
     "start": "vue-cli-service build --mode development --watch",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "start": "vue-cli-service build --mode development --watch"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.20.0",
