--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "form-data": "^3.0.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.13",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
