API endpoint and stripe
Added endpoint for change password as well as configure stripe, added
it's create session endpoint also configured the stripe webhook

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "vue-loading-spinner": "^1.0.11",
     "vue-property-decorator": "^9.0.2",
     "vue-router": "^3.0.2",
+    "vue-stripe-checkout": "^3.5.11",
     "vue2-transitions": "^0.2.3",
     "vuedraggable": "^2.24.1",
     "vuelidate": "^0.7.5",
