--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "stripe": "^8.109.0"
   }
 }
