--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.0.4",
     "fabric": "^4.2.0",
     "flatpickr": "^4.5.1",
+    "moment": "^2.29.1",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
     "sweetalert2": "^10.3.5",
