--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "bootstrap-vue": "^2.0.4",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.18.1",
     "fabric": "^4.2.0",
     "flatpickr": "^4.5.1",
     "moment": "^2.29.1",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
     "sweetalert2": "^10.5.1",
-    "vue": "^2.6.6",
+    "vue": "^2.6.12",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
     "vue-loading-spinner": "^1.0.11",
