--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "sweetalert2": "^10.5.1",
     "vue": "^2.6.12",
     "vue-flatpickr-component": "^8.1.1",
+    "vue-json-csv": "^1.2.11",
     "vue-lazyload": "^1.2.6",
     "vue-loading-spinner": "^1.0.11",
     "vue-property-decorator": "^9.0.2",
