--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "bootstrap-vue": "^2.18.1",
     "fabric": "^4.2.0",
     "flatpickr": "^4.5.1",
+    "headroom.js": "^0.12.0",
     "moment": "^2.29.1",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
     "sweetalert2": "^10.5.1",
     "vue": "^2.6.12",
     "vue-flatpickr-component": "^8.1.1",
+    "vue-headroom": "^0.10.1",
     "vue-json-csv": "^1.2.11",
     "vue-lazyload": "^1.2.6",
     "vue-loading-spinner": "^1.0.11",
