--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "vue-headroom": "^0.10.1",
     "vue-json-csv": "^1.2.11",
     "vue-lazyload": "^1.2.6",
+    "vue-loading-overlay": "^3.4.2",
     "vue-loading-spinner": "^1.0.11",
     "vue-property-decorator": "^9.0.2",
     "vue-router": "^3.0.2",
